--- a/what-is-aqi.html
+++ b/what-is-aqi.html
@@ -13,7 +13,7 @@
 
     <main>
         <section>
-            <h2>Learn about AQI</h2>
+            <h2>What is AQI?</h2>
         </section>
     </main>
 
