--- a/aqi-by-country.html
+++ b/aqi-by-country.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEAirSense | AQI by Country</title>
+    
+    <link rel="icon" type="image/png" href="img/seairsense.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -19,6 +21,7 @@
 
     <div id="footer-placeholder"></div>
 
+    <script type="text/javascript" src="https://widget.iqair.com/script/widget_v3.0.js"></script>
     <script src="js/script.js"></script>
 </body>
 
